--- a/package.json
+++ b/package.json
@@ -6,20 +6,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "16.13.0",
-    "react-dom": "16.13.0",
-    "react-scripts": "3.4.0",
-    "typescript": "3.8.3"
+    "react": "17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "^5.0.0",
+    "typescript": "^4.6.3"
   },
   "scripts": {
     "start": "react-scripts start"
   },
   "devDependencies": {
-    "@types/jest": "25.1.4",
-    "@types/node": "11.15.5",
-    "@types/react": "16.9.23",
-    "@types/react-dom": "16.9.5",
-    "typescript": "3.8.3"
+    "@types/node": "^17.0.23",
+    "@types/react": "^17.0.43",
+    "@types/react-dom": "^17.0.14"
   },
   "browserslist": [
     ">0.2%",
